--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ jdk:
 script: mvn clean install                                    
 
 notifications:
-  email: Tanishq.Jaswani@iiitb.ac.in
+  email: tanishq.jaswani@iiitb.ac.in
