--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 language: java                                            
 jdk:                                                     
-- openjdk8                                            
-                                                
+- openjdk8
+env:
+- IMGNAME=tanishqj13/scientific-calculator:latest
+services: 
+- docker
+before_install: 
+- docker image build -t ${IMGNAME}
 script: mvn clean install                                    
-
+deploy: 
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  on:
+    branch: master
 notifications:
   email: tanishq.jaswani@iiitb.ac.in
