--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
 - docker
 script: 
 - mvn clean install                                    
+after_success:
 - docker build -t tanishqj13/scientific-calculator
 deploy: 
   provider: pages
