--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
 after_success:
 - docker build -t tanishqj13/scientific-calculator
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+- docker push tanishqj13/scientific-calculator
 #deploy: 
 #  provider: pages
 #  skip-cleanup: true
